# conan2-training-lib

./: .gitignore  CMakeLists.txt  conanfile.py
include/trainingLib/: trainingLib.h
src/: my_lib_class.cpp  my_lib_class.h  trainingLib.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt
tests/unit/: my_lib_class_test.cpp
